Fix: improve company info text contrast

--- a/igrs-netlify/css/style.css
+++ b/igrs-netlify/css/style.css
@@ -1112,6 +1112,14 @@ footer .footer-section a:hover {
     font-weight: 400;
 }
 
+.company-info p,
+.company-info li,
+.company-info span,
+.company-info div {
+    color: #111827;
+    font-weight: 400;
+}
+
 .company-info a {
     color: #111827;
     text-decoration: underline;
